--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Baphomet - Speak of the Devil</title>
+    <link rel="icon" type="image/png" href="/baphy-candle-favicon.png" />
+    <title>Baphy - It's a thing that does some things</title>
   </head>
   <body>
     <div id="root"></div>
