Configure app for path-based deployment at /baphomet instead of subdomain

--- a/public/404.html
+++ b/public/404.html
@@ -7,7 +7,7 @@
     <script>
         // Store the current path and redirect to home, let React Router handle it
         sessionStorage.setItem('redirectPath', window.location.pathname + window.location.search);
-        window.location.href = '/';
+        window.location.href = '/baphomet/';
     </script>
 </head>
 <body>
