Fix routing for direct URL access - handle 404 redirects properly

--- a/public/404.html
+++ b/public/404.html
@@ -6,8 +6,13 @@
     <title>Baphomet UI</title>
     <script>
         // Store the current path and redirect to home, let React Router handle it
-        sessionStorage.setItem('redirectPath', window.location.pathname + window.location.search);
-        window.location.href = '/';
+        (function() {
+            var path = window.location.pathname + window.location.search + window.location.hash;
+            console.log('404 redirect - storing path:', path);
+            sessionStorage.setItem('redirectPath', path);
+            // Use replace to avoid adding to browser history
+            window.location.replace('/');
+        })();
     </script>
 </head>
 <body>
